# ortTest

./: Cargo.toml  model.onnx
src/: main.rs
