[package]
name = "ortTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
ort = {version = "1.15.2",features = ["load-dynamic","half","nnapi",],default-features = false}
#rand = "0.8.5"
ndarray = "0.15.6"